new version without bags
fix search
fix scaling

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Stoyka.loader.js";
+      var loaderUrl = buildUrl + "/StoykaBuild3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Stoyka.data.unityweb",
-        frameworkUrl: buildUrl + "/Stoyka.framework.js.unityweb",
-        codeUrl: buildUrl + "/Stoyka.wasm.unityweb",
+        dataUrl: buildUrl + "/StoykaBuild3.data.unityweb",
+        frameworkUrl: buildUrl + "/StoykaBuild3.framework.js.unityweb",
+        codeUrl: buildUrl + "/StoykaBuild3.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Stoyka",
