--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="unity-build-title">Stoyka</div>
       </div>
     </div>
-    <script>
+    <script charset="utf-8">
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
