--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="Windows-1251">
+    <meta charset="windows-1251">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Stoyka</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
