--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Stoyka</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
@@ -103,6 +103,7 @@
 
       var script = document.createElement("script");
       script.src = loaderUrl;
+      script.charset="UTF-8";
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
